HttpClient executeAsync interface change